Prepare for initial adoption read
